--- a/.github/workflows/byggpipeline.yaml
+++ b/.github/workflows/byggpipeline.yaml
@@ -10,4 +10,5 @@ jobs:
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-    - run: dotnet build
+    - name: Bygg koden
+      run: dotnet build
